--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<button onclick="alert('قم بإعادة التحديث لإعادة تعيين النتيجة')">إعادة</button><!DOCTYPE html>
 <html lang="en">
 <style>
 body {
@@ -85,7 +85,7 @@ button:p {
     <script src="script.js"></script>
 </body>
 <footer>
-<button><p>إعادة</p></button>
+<button onclick="alert('قم بإعادة التحديث لإعادة تعيين النتيجة')">إعادة</button>
   
 </footer>
 <script>
